# sysrepo2-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  main.cue
.github/workflows/: ci.yaml
assets/yang/: test.yang
src/: change.rs  connection.rs  error.rs  lib.rs  log.rs  session.rs  types.rs  utils.rs  value.rs
sysrepo2-sys/: Cargo.toml  build.rs
sysrepo2-sys/pre-generated-bindings/: sysrepo2-df89fc02e301cc8f2e6b30ec37b990f52ca1d5c4.rs
sysrepo2-sys/src/: lib.rs
