[package]
name = "sysrepo2"
version = "0.1.0"
authors = ["Wataru Ishida <wataru.ishid@gmain.com>"]
description = "sysrepo2 bindings for Rust"
keywords = ["yang", "sysrepo"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ishidawataru/sysrepo2-rs"
documentation = "https://docs.rs/sysrepo2"
readme = "README.md"
categories = ["parser-implementations"]
exclude = ["assets/**"]

[dependencies]
sysrepo2-sys = { path = "sysrepo2-sys", version = "0.1.0" }
yang2 = { path = "sm/yang2-rs" }
libyang2-sys = { path = "sm/yang2-rs/libyang2-sys" }
bitflags = "1.0"
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread", "time", "net"] }

[features]
default = []
use_bindgen = ["sysrepo2-sys/use_bindgen"]
